--- a/dev/scss/main/buttongroup.scss
+++ b/dev/scss/main/buttongroup.scss
@@ -52,7 +52,7 @@
     z-index: 20;
     margin: 0;
     padding: 0;
-    width: $right-match-distance;
+    width: $right-view-distance;
     > span:first-child {
       margin-top: $border-size
     }
